Add Cynthia's related work sections for Yang and Ertekin papers
With minor modifications

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -13,7 +13,6 @@ note={Work in progress},
 year={2017}
 }
 
-
 @inproceedings{LakkarajuRu17,
 __author={Himabindu Lakkaraju and Cynthia Rudin},
 author={H. Lakkaraju and C. Rudin},
@@ -438,13 +437,12 @@ author={Muggleton, S. and De Raedt, L.},
   publisher={Elsevier}
 }
 
-@techreport{RudinEr15,
+@techreport{RudinEr15-tr,
 author={Cynthia Rudin and {\c{S}}eyda Ertekin},
 year={2015},
 title={Learning Optimized Lists of Classification Rules},
 institution={Massachusetts Institute of Technology}
 }
-
 
 @article{Lip10,
   author={Gregory Y.H. Lip and Lars Frison and Jonathan L. Halperin and Deirdre A. Lane}, 
