Add section on curiosity and tweak priority queue description

--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -58,6 +58,8 @@
 \DeclareMathOperator*{\argmax}{argmax}
 \def\Major{\q_{\textnormal{maj}}}
 \def\Minor{\q_{\textnormal{min}}}
+\def\Curiosity{\mathcal{C}}
+\def\NCap{N_{\textnormal{cap}}}
 
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\Ac}{\mathcal{A}^c}
