Tweak ablation table formatting for JMLR

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -149,6 +149,7 @@ is the upper bound on remaining search space size
 
 %\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
 \begin{table}[t!]
+\centering
 \begin{tabular}{l | c | c | c | c | c}
 Removed component & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
 \hline
@@ -180,7 +181,7 @@ We terminated each experiment in the last row after consuming 390-410GB RAM.
 %
 In all but the final row and column, we report means
 (and standard deviations) over 10 cross-validation folds;
-in the final row, we report the minimum values across folds. \\
+in the final row, we report the minimum values across folds.
 %
 *~Only 4 out of 10 folds achieve the optimum before being terminated.
 }
