Experiments section format for long version

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,3 +1,7 @@
+\begin{arxiv}
+\newpage
+\end{arxiv}
+
 \section{Conclusion}
 
 CORELS is an efficient and accurate algorithm for constructing provably optimal rule lists.
