--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -1,9 +1,12 @@
+\clearpage
+
 \section{Experiments}
 \label{sec:experiments}
 
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+% left lower right upper
 \includegraphics[trim={10mm, 5mm, 25mm, 5mm},
 width=\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
@@ -28,44 +31,6 @@ For CORELS, we use~${\Reg=0.01}$.
 Note that we were unable to execute RIPPER for the NYCLU problem.
 }
 \label{fig:comparison}
-\end{figure}
-
-\begin{figure}[t!]
-\begin{center}
-%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
-\includegraphics[trim={12mm, 0mm, 24mm, 5mm},
-width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
-\includegraphics[trim={12mm, 5mm, 24mm, 1mm},
-width=0.75\textwidth]{figs/frisk-sparsity-training.pdf}
-\end{center}
-\caption{Training and test accuracy as a function of model size.
-%
-For CORELS, CART, and C4.5, we vary the regularization parameter~$\Reg$,
-and complexity parameters~$cp$ and~$C$, respectively;
-numbers within parentheses in the legend indicate parameter values.
-%
-Note that the CART implementation sets ${cp = 0.01}$ by default,
-and C4.5 uses ${C = 0.25}$.
-%
-Legend markers and error bars indicate means and standard deviations,
-respectively, of test accuracy across cross-validation folds.
-%
-Small circles mark associated training accuracy means.
-%
-Top:  Two-year recidivism prediction for the ProPublica COMPAS dataset.
-%
-None of the models exhibit significant overfitting:
-mean training accuracy never exceeds mean test accuracy
-by more than about 0.01.
-%
-Bottom:  Weapon prediction for the NYCLU stop-and-frisk dataset.
-%
-Only CART with ${cp = 0.001}$ significantly overfits.
-%
-We do not depict C4.5, which finds large models (${>100}$ leaves)
-and dramatically overfits for all tested parameters.
-}
-\label{fig:sparsity}
 \end{figure}
 
 Our experimental analysis addresses four questions:
@@ -111,14 +76,56 @@ between algorithms.
 We conclude that CORELS produces models whose accuracy is comparable
 to those found via other algorithms.
 
+\begin{figure}[t!]
+\begin{center}
+%\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
+% left lower right upper
+\includegraphics[trim={12mm, 0mm, 24mm, 5mm},
+width=0.75\textwidth]{figs/compas-sparsity-training.pdf}
+\includegraphics[trim={12mm, 5mm, 24mm, 1mm},
+width=0.75\textwidth]{figs/frisk-sparsity-training.pdf}
+\end{center}
+\caption{Training and test accuracy as a function of model size.
+%
+For CORELS, CART, and C4.5, we vary the regularization parameter~$\Reg$,
+and complexity parameters~$cp$ and~$C$, respectively;
+numbers within parentheses in the legend indicate parameter values.
+%
+Note that the CART implementation sets ${cp = 0.01}$ by default,
+and C4.5 uses ${C = 0.25}$.
+%
+Legend markers and error bars indicate means and standard deviations,
+respectively, of test accuracy across cross-validation folds.
+%
+Small circles mark associated training accuracy means.
+%
+Top:  Two-year recidivism prediction for the ProPublica COMPAS dataset.
+%
+None of the models exhibit significant overfitting:
+mean training accuracy never exceeds mean test accuracy
+by more than about 0.01.
+%
+Bottom:  Weapon prediction for the NYCLU stop-and-frisk dataset.
+%
+Only CART with ${cp = 0.001}$ significantly overfits.
+%
+We do not depict C4.5, which finds large models (${>100}$ leaves)
+and dramatically overfits for all tested parameters.
+}
+\label{fig:sparsity}
+\end{figure}
+
 Figure~\ref{fig:sparsity} summarizes differences in accuracy and model size
 for CORELS and other tree (CART, C4.5) and rule list (RIPPER, SBRL) learning algorithms.
 %
 For both problems, CORELS can learn short rule lists without sacrificing accuracy.
 
+\clearpage
+
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
+% left lower right upper
 \includegraphics[trim={20mm, 15mm, 24mm, 15mm},
 width=0.75\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{center}
@@ -147,47 +154,6 @@ is the upper bound on remaining search space size
 \label{fig:objective}
 \end{figure}
 
-%\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
-\begin{table}[t!]
-\centering
-\begin{tabular}{l | c | c | c | c | c}
-Removed component & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
-\hline
-none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
-priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
-support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
-symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
-lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
-%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
-equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
-\end{tabular}
-\vspace{4mm}
-\caption{Per-component performance improvement.
-%
-The columns report total execution time,
-time to optimum, number of queue insertions,
-maximum queue size, and maximum evaluated prefix length.
-%
-The first row shows CORELS; subsequent rows show variants
-that each remove a specific implementation optimization or bound.
-%
-(We are not measuring the cumulative effects of removing a sequence of components.)
-%
-All rows represent complete executions, except for the final row,
-in which each execution was terminated due to memory constraints,
-once the size of the cache reached ${8 \times 10^8}$ elements,
-after consuming 390-410GB RAM.
-We terminated each experiment in the last row after consuming 390-410GB RAM.
-%
-In all but the final row and column, we report means
-(and standard deviations) over 10 cross-validation folds;
-in the final row, we report the minimum values across folds.
-%
-*~Only 4 out of 10 folds achieve the optimum before being terminated.
-}
-\label{tab:ablation}
-\end{table}
-
 In the remainder, we show results using the ProPublica dataset.
 %
 Figure~\ref{fig:objective} illustrates how both the objective and the size of
@@ -210,10 +176,55 @@ Figure~\ref{fig:queue} presents a view of the same experiments, focusing
 on three of our optimizations. These plots depict the number of
 prefixes of a given length in the queue during the algorithm's execution.
 
-\begin{figure}[t!]
+\clearpage
+
+%\includegraphics[width=0.75\textwidth]{figs/sketch-ablation.png}
+\begin{table}[t!]
+\centering
+\begin{tabular}{l | c | c | c | c | c}
+Removed component & $t_\text{total}$ (min) & $t_\text{opt}$ (s) & $i_\text{total}$ ($\times 10^6$) & $Q_\text{max}$ ($\times 10^6$) & $K_\text{max}$ \\
+\hline
+none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
+priority queue (BFS) & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
+support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
+symmetry-aware map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
+lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
+%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
+equivalent pts bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
+\end{tabular}
+%\vspace{4mm}
+\caption{Per-component performance improvement.
+%
+The columns report total execution time,
+time to optimum, number of queue insertions,
+maximum queue size, and maximum evaluated prefix length.
+%
+The first row shows CORELS; subsequent rows show variants
+that each remove a specific implementation optimization or bound.
+%
+(We are not measuring the cumulative effects of removing a sequence of components.)
+%
+All rows represent complete executions, except for the final row,
+in which each execution was terminated due to memory constraints,
+once the size of the cache reached ${8 \times 10^8}$ elements,
+after consuming 390-410GB RAM.
+We terminated each experiment in the last row after consuming 390-410GB RAM.
+%
+In all but the final row and column, we report means
+(and standard deviations) over 10 cross-validation folds;
+in the final row, we report the minimum values across folds. \\
+%
+*~Only 4 out of 10 folds achieve the optimum before being terminated.
+}
+\vspace{4mm}
+\label{tab:ablation}
+\end{table}
+
+\begin{figure}[b!]
 \begin{center}
+% left lower right upper
 \includegraphics[trim={30mm 10mm 35mm 30mm},
-width=\textwidth]{figs/kdd_compas_ablation-queue.pdf}
+width=0.85\textwidth]{figs/kdd_compas_ablation-queue.pdf}
 \end{center}
 \caption{Logical queue composition.
 %
