Move N_cap definition inline

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -117,9 +117,7 @@ We introduce a custom priority metric that we call \emph{curiosity}:
   + \frac{\Reg K N}{\NCap} \,,
 \end{align}
 where~$\NCap$ is the number of datapoints captured by~$\Prefix$, \ie
-\begin{align}
-\NCap \equiv \sum_{n=1}^N \Cap(x_n, \Prefix).
-\end{align}
+${\NCap \equiv \sum_{n=1}^N \Cap(x_n, \Prefix)}$.
 %
 We can think of the curiosity as the expected objective value
 of a rule list~${\RL' = }$ ${(\Prefix', \Labels', \Default', K')}$
