Add acknowledgement for Cynthia

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -75,7 +75,7 @@
 % Acknowledgements should go at the end, before appendices and references
 \acks{E.A. is supported by the Miller Institute for Basic Research in Science,
 University of California, Berkeley, and is hosted by Prof. M.I. Jordan
-at RISELab.}
+at RISELab.  CDR is supported in part by MIT-Lincoln Labs.}
 
 \vskip 0.2in
 \bibliography{refs}
