Add version of JMLR style file for use on arxiv

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -1,5 +1,6 @@
 \documentclass[twoside,11pt]{article}
-\usepackage{jmlr2e}
+%\usepackage{jmlr2e}            % <- uncomment for JMLR submission
+\usepackage{jmlr2e-stripped}    % <- uncomment for arXiv version
 %\documentclass[aoas,preprint]{imsart}
 %\setattribute{journal}{name}{}
 
